Fix edit preview having leading whitespace

--- a/src/components/CommentListItem.scss
+++ b/src/components/CommentListItem.scss
@@ -78,7 +78,6 @@
 
     &.highlight-delete {
       border: 2px solid $red;
-      background-color: $navy-0;
     }
 
   }
@@ -132,7 +131,6 @@
 
     &.highlight-delete {
       border: 2px solid $red;
-      background-color: $navy-1;
     }
 
   }
